k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-happens-ingress
  namespace: team-git-happens
  annotations:
    ng    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: git.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 8080
          - path: /courses
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 8080
          - path: /review
            pathType: Prefix
            backend:
              service:
                name: review-service
   - path: /recommend
            pathType: Prefix
            backend:
              service:
                name: recommendation-gateway
                port:
                  number: 8080
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: client-app
                port:
                  number: 80
